[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Roboto Slab/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Components/UI/Score Board/ScoreBoard.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
/fonts/T = SubResource( 1 )
Label/fonts/font = SubResource( 2 )

[node name="ScoreBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
time_match = 180.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -535.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CenterContainer"]
margin_left = 567.0
margin_top = 25.0
margin_right = 712.0
margin_bottom = 159.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/AspectRatioContainer"]
margin_right = 145.0
margin_bottom = 134.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/AspectRatioContainer/VBoxContainer"]
margin_right = 145.0
margin_bottom = 65.0

[node name="TimeLabel" type="Label" parent="CenterContainer/AspectRatioContainer/VBoxContainer/CenterContainer2"]
margin_right = 145.0
margin_bottom = 65.0
theme = SubResource( 3 )
text = "10:00"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/AspectRatioContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 145.0
margin_bottom = 134.0

[node name="ScoreLabel" type="Label" parent="CenterContainer/AspectRatioContainer/VBoxContainer/CenterContainer"]
margin_right = 145.0
margin_bottom = 65.0
theme = SubResource( 3 )
text = "0 - 0"
